# Made-With-ML

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  anyscale_service.py  finetune_LLM_Ray.ipynb  index.html  metrics.json  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  response.json  sitemap.xml  training_results.json
.github/utils/: setup.yaml  workload.tpl.yaml
.github/workflows/: deploy.yaml  deployment.yaml  documentation.yaml  documentation.yml  evaluation.yaml  ml_workloads.yaml  serve.yaml  serving.yaml  setup.yaml  testing.yaml  training.yaml  workloads.yaml
anyscale/: README.md  __init__.py  cluster_env.yaml  compute_config.yaml  job_train.sh  job_train.yaml  service.py  service.yaml
deploy/: README.md  app.py  cluster_compute.yaml  cluster_env.yaml  compute_config.yaml  get_latest_cluster_env_build_id.py  job_eval.sh  job_eval.yaml  job_train.sh  job_train.yaml  job_tune.sh  job_tune.yaml  service.yaml  utils.py
deploy/jobs/: evaluate.py  evaluate.sh  evaluate.yaml  evaluate_model.sh  evaluate_model.yaml  prod_eval.sh  prod_eval.yaml  test_code.sh  test_code.yaml  test_data.sh  test_data.yaml  test_model.sh  test_model.yaml  train.sh  train.yaml  train.yaml.tpl  train_model.sh  train_model.yaml  tune_model.sh  tune_model.yaml  workloads.sh  workloads.yaml
deploy/services/: serve.py  serve.yaml  serve_model.py  serve_model.yaml  service.py  service.yaml  service.yaml.tpl
deploy/utils/: get_latest_cluster_env_build_id.py  job_submit.py  utils.py
docs/: index.md
docs/madewithml/: eval.md
madewithml/: config.py  data.py  evaluate.py  predict.py  serve.py  train.py  tune.py  utils.py
madewithml/data/: index.html
madewithml/evaluate/: index.html
madewithml/models/: index.html
madewithml/predict/: index.html
madewithml/serve/: index.html
madewithml/train/: index.html
madewithml/tune/: index.html
madewithml/utils/: index.html
notebooks/: .gitignore  benchmarks.ipynb  dataset_config_split.ipynb  finetune-llm.ipynb  finetune_llm.ipynb  madewithml.ipynb  openai.ipynb  testing.ipynb
src/app/: api.py  schemas.py
src/config/: args.json  config.json  config.py  test.json
src/madewithml/: config.py  data.py  eval.py  evaluate.py  models.py  predict.py  serve.py  train.py  tune.py  utils.py
tests/code/: conftest.py  test_data.py  test_predict.py  test_train.py  test_tune.py  test_utils.py  utils.py
tests/data/: conftest.py  test_dataset.py
tests/model/: conftest.py  test_behavioral.py
