[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "madewithml"
description = "Classify projects that are made with ml."
authors = [{name = "Goku Mohandas", email = "goku@madewithml.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipywidgets==8.0.6",
    "matplotlib==3.7.1",
    "mlflow==2.2.2",
    "nltk==3.7",
    "numpy==1.22.4",
    "numpyencoder==0.3.0",
    "pandas==1.4.4",
    "pretty-errors==1.2.25",
    "ray[air]==2.3.0",
    "scikit-learn==1.2.2",
    "snorkel==0.9.9",
    "torch==2.0.0",
    "transformers==4.27.2",
]

[project.urls]
homepage = "https://madewithml.com/"
repository = "https://github.com/GokuMohandas/mlops-course"
documentation = "https://gokumohandas.github.io/mlops-course/"

[project.optional-dependencies]
notebook = [
    "cleanlab==1.0.1",
    "imbalanced-learn==0.8.1",
    "jupyterlab==3.6.2",
    "lime==0.2.0.1",
    "seaborn==0.12.2",
    "wordcloud==1.8.2.2",
]
docs = [
    "mkdocs==1.3.0",
    "mkdocstrings==0.18.1",
]
style = [
    "black==22.3.0",
    "flake8==3.9.2",
    "isort==5.10.1",
]
test = [
    "pytest==7.1.2",
    "pytest-cov==2.10.1",
    "great-expectations==0.15.15",
]
dev = [
    "madewithml[docs]",
    "madewithml[style]",
    "madewithml[test]",
    "pre-commit==2.19.0",
]