[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "madewithml"
description = "Classify projects that are made with ml."
authors = [{name = "Goku Mohandas", email = "goku@madewithml.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipywidgets==8.0.6",
    "matplotlib==3.7.1",
    "mlflow==2.2.2",
    "nltk==3.7",
    "numpy==1.22.4",
    "numpyencoder==0.3.0",
    "pandas==1.4.4",
    "pretty-errors==1.2.25",
    "ray[air]==2.3.0",
    "scikit-learn==1.2.2",
    "snorkel==0.9.9",
    "torch==2.0.0",
    "transformers==4.27.2",
]

[project.urls]
homepage = "https://madewithml.com/"
repository = "https://github.com/GokuMohandas/mlops-course"
documentation = "https://gokumohandas.github.io/mlops-course/"

[project.optional-dependencies]
notebook = [
    "cleanlab==1.0.1",
    "imbalanced-learn==0.8.1",
    "jupyterlab==3.6.2",
    "lime==0.2.0.1",
    "seaborn==0.12.2",
    "wordcloud==1.8.2.2",
]
docs = [
    "mkdocs==1.3.0",
    "mkdocstrings==0.18.1",
]
style = [
    "black==22.3.0",
    "flake8==3.9.2",
    "Flake8-pyproject-1.2.3",
    "isort==5.10.1",
    "pyupgrade-3.3.2",
]
test = [
    "pytest==7.1.2",
    "pytest-cov==2.10.1",
    "great-expectations==0.15.15",
]
dev = [
    "madewithml[docs]",
    "madewithml[style]",
    "madewithml[test]",
    "pre-commit==2.19.0",
    "rich==13.3.4",
    "typer==0.7.0",
]

# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
max-line-length = 79
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true
