[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "madewithml"
description = "Classify projects that are made with ml."
authors = [{name = "Goku Mohandas", email = "goku@madewithml.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hyperopt==0.2.7",
    "ipywidgets>=8",
    "matplotlib==3.7.1",
    "mlflow==2.3.1",
    "nltk==3.8.1",
    "numpy==1.24.3",
    "numpyencoder==0.3.0",
    "pandas==2.0.1",
    "pretty-errors==1.2.25",
    "ray[air]==2.4.0",
    "scikit-learn==1.2.2",
    "snorkel==0.9.9",
    "SQLAlchemy==1.4.48",
    "torch==2.0.0",
    "transformers==4.28.1",
]

[project.urls]
homepage = "https://madewithml.com/"
repository = "https://github.com/GokuMohandas/mlops-course"
documentation = "https://gokumohandas.github.io/mlops-course/"

[project.optional-dependencies]
notebook = [
    "cleanlab==2.3.1",
    "jupyterlab==3.6.3",
    "lime==0.2.0.1",
    "seaborn==0.12.2",
    "wordcloud==1.8.2.2",
]
docs = [
    "mkdocs==1.4.2",
    "mkdocstrings==0.21.2",
    "mkdocstrings[python]>=0.18",
]
style = [
    "black==23.3.0",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "isort==5.12.0",
    "pyupgrade==3.3.2",
]
test = [
    "great-expectations==0.16.5",
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
]
dev = [
    "madewithml[notebook]",
    "madewithml[docs]",
    "madewithml[style]",
    "madewithml[test]",
    "anyscale==0.5.110",
    "pre-commit==3.2.2",
    "typer==0.7.0",
]

# Black formatting
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Pytest cov
[tool.coverage.run]
omit=["src/madewithml/evaluate.py", "src/madewithml/serve.py"]
